@@ -7,6 +7,7 @@ import de.adorsys.registry.manager.converter.AspspTOConverter;
 import de.adorsys.registry.manager.model.AspspTO;
 import de.adorsys.registry.manager.service.AspspService;
 import de.adorsys.registry.manager.service.model.AspspBO;
+import de.adorsys.registry.manager.service.model.PageBO;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,12 +24,13 @@ import pro.javatar.commons.reader.JsonReader;
 import pro.javatar.commons.reader.YamlReader;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import static de.adorsys.registry.manager.resource.AspspResource.ASPSP_URI;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @RunWith(SpringRunner.class)
@@ -52,13 +54,15 @@ public class AspspResourceTest {
     @Test
     public void getAspsps() throws Exception {
 
-        when(aspspService.getByAspsp(any(), anyInt(), anyInt())).thenReturn(Collections.emptyList());
+        when(aspspService.getByAspsp(any(), anyInt(), anyInt())).thenReturn(new PageBO(List.of(bo), 1L));
 
         mockMvc.perform(MockMvcRequestBuilders
                                 .get(ASPSP_URI)
                                 .param("bic", "00000000"))
                 .andDo(print())
                 .andExpect(status().is(HttpStatus.OK.value()))
+                .andExpect(header().exists("X-Total-Elements"))
+                .andExpect(header().longValue("X-Total-Elements", 1L))
                 .andReturn();
         verify(aspspService, times(1)).getByAspsp(any(), anyInt(), anyInt());
     }
